Page MenuHome GnuPG

libgcrypt link error if cipher chacha20 is not included
Open, NormalPublic

Description

The functions _gcry_chacha20_poly1305_encrypt and _gcry_chacha20_poly1305_decrypt are called from cipher-poly1305.c even when the chacha20 cipher is excluded from the build, e.g. by configuring the build with

./configure --enable-ciphers=aes

This causes the following errors during the link step:

/home/acollier/.local/bin/ld: ./.libs/libgcrypt.so: undefined reference to `_gcry_chacha20_poly1305_encrypt'
/home/acollier/.local/bin/ld: ./.libs/libgcrypt.so: undefined reference to `_gcry_chacha20_poly1305_decrypt'

Details

Version
1.10.1

Event Timeline

werner triaged this task as Normal priority.Feb 24 2023, 9:05 AM
werner added a project: patch.
werner added a subscriber: werner.

Thanks