cipher: Enable the fast path to ChaCha20 only when supported.

cipher/cipher-poly1305.c (_gcry_cipher_poly1305_encrypt)
(_gcry_cipher_poly1305_decrypt) [USE_CHACHA20]: Conditionalize.

--

Cherry-picked master commit of:
	137f1fd82bc9136d434ca41f58d62091b64df6db

GnuPG-bug-id: 6384
Reported-by: Andrew Collier
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>